flatpak: fix module discovery with nested modules

This fixes an issue where a dependency has nested modules and in turn
tricks Builder into which is the module for the project.

https://bugzilla.gnome.org/show_bug.cgi?id=790238